Added configuration to PluginContainer